# ml-platform-comparison

./: .gitignore  ML_Platform_UX_Testing_Budget.md  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/: raw.dvc
data/processed/: .gitignore  processed_train.csv.dvc  train_identity.csv.dvc  train_transaction.csv.dvc  train_transaction_processed.csv.dvc
data/raw/: .gitignore  train_identity.csv.dvc  train_transaction.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
ml_platform_comparison/: __init__.py  dataset.py  features.py  plots.py
ml_platform_comparison/modeling/: predict.py  train.py
notebooks/: app.py  fraud_detection_features.ipynb  fraud_model.joblib  phase0.ipynb  project_setup.ipynb
