[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_platform_comparison"
version = "0.0.1"
description = "Evaluate the UX of different ML platforms by building the same models across them. The study will focus on ease of use, feature comprehensiveness, and developer experience."
authors = [
  { name = "Vic Mitchell" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ml_platform_comparison"]
force_sort_within_sections = true
